[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["funsearch", "funsearch.container"]

[project]
name = "funsearch"
dynamic = [
  "version",
]
description = "FunSearch algorithm: Mathematical discoveries from program search with large language models"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "absl-py",
  "click",
  "cloudpickle",
  "llama-cpp-python",
  "scipy",
  "numpy",
]

[project.scripts]
funsearch = "funsearch.__main__:main"
